# my-films

./: README.md  build.py  data.yml  flake.nix  imdb_result.json  index.html  pyproject.toml  result.html  template.html
.github/workflows/: deploy.yml
src/my_films/: __init__.py
