[project]
name = "my-films"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hkalbasi", email = "hamidrezakalbasi@protonmail.com" }
]
dependencies = [
    "pyyaml>=6.0.2",
    "python-liquid>=1.12.1",
    "imdbpy>=2022.7.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/my_films"]
